updating references.bib file

--- a/index.Rmd
+++ b/index.Rmd
@@ -57,7 +57,7 @@ Additional Questions for Assignment 2 :
 
 We would like to address these new questions because we want to focus more on the original question, **"How sustainable is the energy production in Europe?"**. We think by picking out select renewable energy sources, like hydro power and pumped hydro power, it will help answer the sustainability question. More specifically, it would be useful to see how the renewable energy sources we have selected compare across countries to visualize how these countries are trying to be more sustainable in their energy production.
 
-The original analysis excluded Pumped Hydro power. Pumped hydro power is listed as a level 2 energy type in the data, whereas Hydro power is listed as a level 1 energy type. The data description points out that the level 2 energy is included as a part of level 1, meaning energy produced by Pumped Hydro power is included in Hydro power's energy production. However, there is clearly a difference between both these energy sources and we think it'll be interesting to look into these differences.
+The original analysis excluded Pumped Hydro power. Pumped hydro power is listed as a level 2 energy type in the data, whereas Hydro power is listed as a level 1 energy type. The data in the tidytuesday package points out that level 2 makes up level 1 that makes up the total @mock_scherer_2020, meaning energy produced by Pumped Hydro power is included in Hydro power's energy production, which is the total energy production for both. However, there is clearly a difference between both these energy sources and we think it'll be interesting to look into these differences.
 
 We also think it is interesting to look at how countries have been performing to reach their 2020 renewable energy target because it gives an overview into which country is taking a more proactive approach to becoming more sustainable. Thus, we are curious to see how countries have fared as of 2018 to see whether they are on track to reach their goal.
 
