--- a/references.bib
+++ b/references.bib
@@ -61,6 +61,15 @@
     url = {https://CRAN.R-project.org/package=tidytuesdayR},
   }
 
+  @misc{mock_scherer_2020,
+  title={rfordatascience/tidytuesday},
+  url={https://github.com/rfordatascience/tidytuesday/blob/master/data/2020/2020-08-04/readme.md},
+  journal={GitHub},
+  author={Mock, Thomas and Scherer, Cedric},
+  year={2020},
+  month={Aug}
+  }
+
 @misc{methodology_eurostat,
 	title = {Methodology},
 	author = {Eurostat},
