adding a new reference

--- a/references.bib
+++ b/references.bib
@@ -70,6 +70,14 @@
   month={Aug}
   }
 
+  @misc{eurostat_2018,
+  title={ Share of renewable energy in gross final energy consumption},
+  url={https://ec.europa.eu/eurostat/tgm/table.do?tab=table&plugin=1&language=en&pcode=t2020_31},
+  journal={Eurostat},
+  year={2018},
+  month={Aug}
+  }
+
 @misc{methodology_eurostat,
 	title = {Methodology},
 	author = {Eurostat},
